# Agentic-RAG

./: LICENSE  eval_agentic_rag_update.txt  evaluate_rag.py  pyproject.toml  requirements.txt
results/agentic_rag/: calculator_core.md
results/eval_results_RTX_3060Ti/: calculator_core_agentic_rag_new.md  calculator_core_agentic_rag_update.md  calculator_core_llm_new.md  calculator_core_rag_new.md  calculator_core_rag_update.md  core_new.py  eval_agentic_rag_new.txt  eval_agentic_rag_update.txt  eval_llm_new.txt  eval_rag_new.txt  eval_rag_update.txt  evaluation_summary.txt
results/eval_results_RTX_3060Ti copy/: calculator_core_rag_update.md  core_update.py  eval_agentic_rag_new.txt  eval_agentic_rag_update.txt  eval_rag_new.txt  eval_rag_update.txt
results/rag_vs_naive/: calculator_core.md  calculator_core_2.md  results.md
results/raw_vs_ast_parsing/: docs_naive_ast_core.md  docs_naive_raw_core.md  results.md
sample_project/docs/: calculator_core.md
sample_project/qdrant_data/: meta.json
sample_project/qdrant_data/collection/eval_repo/: storage.sqlite
sample_project/qdrant_data_rag_update/collection/eval_repo/: storage.sqlite
sample_project/src/: main.py
sample_project/src/calculator/: core.py  utils.py
src/: agentic_rag_pipeline.py  config.py  docs_rag_core.md  embed.py  evaluate_docs.py  evaluate_llm.py  evaluate_rag.py  llm_pipeline.py  markdown_writer.py  old_agentic  prompts.py  rag_pipeline.py  rag_pipeline_w_git_diff.py  store_qdrant.py  symbols_ast.py  symbols_raw.py  tools.py  types_ast.py  util.py  verify_reorder.py
(+1 files in other folders)
